--- a/theDefault/src/main/resources/inklingModResources/localization/eng/DefaultMod-Character-Strings.json
+++ b/theDefault/src/main/resources/inklingModResources/localization/eng/DefaultMod-Character-Strings.json
@@ -1,10 +1,10 @@
 {
-  "inklingMod:DefaultCharacter": {
-    "NAMES": ["The Default", "the Default"],
+  "inklingMod:InklingCharacter": {
+    "NAMES": ["The Inkling", "the Inkling"],
     "TEXT": [
-      "THE_DEFAULT exists and is valid. THE_DEFAULT wishes to T o uuuch# NL Second placeholder line of description text.",
-      "NL You TOUCH the heart.",
-      "Navigating an unlit street, you come across several hooded figures in the midst of some dark ritual. As you approach, they turn to you in eerie unison. The tallest among them bares fanged teeth and extends a long, pale hand towards you. NL ~\"Join~ ~us~ ~basic~ ~one,~ ~and~ ~feel~ ~the~ ~warmth~ ~of~ ~the~ ~Spire.\"~"
+      "Woomy! NL …veemo?",
+      "NL You squidbag aggressively at the heart.",
+      "Navigating an unlit street, you come across several hooded figures in the midst of some dark ritual. As you approach, they turn to you in eerie unison. The tallest among them bares fanged teeth and extends a long, pale hand towards you. NL ~\"Join~ ~us~ ~inky~ ~one,~ ~and~ ~feel~ ~the~ ~warmth~ ~of~ ~the~ ~Spire.\"~"
     ]
   }
 }
