--- a/theDefault/src/main/resources/inklingModResources/localization/eng/DefaultMod-Card-Strings.json
+++ b/theDefault/src/main/resources/inklingModResources/localization/eng/DefaultMod-Card-Strings.json
@@ -1,4 +1,12 @@
 {
+  "inklingMod:Strike": {
+    "NAME": "Strike",
+    "DESCRIPTION": "Deal !D! damage. NL woomy!"
+  },
+  "inklingMod:Defend": {
+    "NAME": "Defend",
+    "DESCRIPTION": "Gain !B! Block. NL veemo!"
+  },
   "inklingMod:DefaultCommonAttack": {
     "NAME": "Strike",
     "DESCRIPTION": "Deal !D! damage. NL [#0000ff]This[] [#ff0000]Is[] [#ffff00]How[] [#88888]color[] [#ff00ff]works.[]"
