--- a/theDefault/src/main/resources/inklingModResources/localization/eng/DefaultMod-Card-Strings.json
+++ b/theDefault/src/main/resources/inklingModResources/localization/eng/DefaultMod-Card-Strings.json
@@ -7,6 +7,10 @@
     "NAME": "Defend",
     "DESCRIPTION": "Gain !B! Block. NL veemo!"
   },
+  "inklingMod:Dive": {
+    "NAME": "Dive!",
+    "DESCRIPTION": "Swim until the start of your next turn. Draw !M! cards."
+  },
   "inklingMod:DefaultCommonAttack": {
     "NAME": "Strike",
     "DESCRIPTION": "Deal !D! damage. NL [#0000ff]This[] [#ff0000]Is[] [#ffff00]How[] [#88888]color[] [#ff00ff]works.[]"
