Oh right, fix Dive's upgrade translations
Or rather, fix the base translation to not say "Draw 1 cards"

--- a/theDefault/src/main/resources/inklingModResources/localization/eng/DefaultMod-Card-Strings.json
+++ b/theDefault/src/main/resources/inklingModResources/localization/eng/DefaultMod-Card-Strings.json
@@ -9,7 +9,8 @@
   },
   "inklingMod:Dive": {
     "NAME": "Dive!",
-    "DESCRIPTION": "Swim until the start of your next turn. Draw !M! cards."
+    "DESCRIPTION": "Swim until the start of your next turn. NL Draw !M! card.",
+    "UPGRADE_DESCRIPTION": "Swim until the start of your next turn. NL Draw !M! cards."
   },
   "inklingMod:DefaultCommonAttack": {
     "NAME": "Strike",
