Customize character select for Inkling
New background, new text!

--- a/theDefault/src/main/resources/inklingModResources/localization/eng/DefaultMod-Character-Strings.json
+++ b/theDefault/src/main/resources/inklingModResources/localization/eng/DefaultMod-Character-Strings.json
@@ -2,7 +2,7 @@
   "inklingMod:InklingCharacter": {
     "NAMES": ["The Inkling", "the Inkling"],
     "TEXT": [
-      "Woomy! NL …veemo?",
+      "Straight from the Splatlands, and fresh as hell. NL Shoots foes with ink weapons to box them in.",
       "NL You squidbag aggressively at the heart.",
       "Navigating an unlit street, you come across several hooded figures in the midst of some dark ritual. As you approach, they turn to you in eerie unison. The tallest among them bares fanged teeth and extends a long, pale hand towards you. NL ~\"Join~ ~us~ ~inky~ ~one,~ ~and~ ~feel~ ~the~ ~warmth~ ~of~ ~the~ ~Spire.\"~"
     ]
