Fresh Kicks relic for Inkling
Doesn't work yet, but it looks neat!

--- a/theDefault/src/main/resources/inklingModResources/localization/eng/DefaultMod-Relic-Strings.json
+++ b/theDefault/src/main/resources/inklingModResources/localization/eng/DefaultMod-Relic-Strings.json
@@ -1,4 +1,9 @@
 {
+  "inklingMod:FreshKicks": {
+    "NAME": "Fresh Kicks",
+    "FLAVOR": "Lookin' sharp! Or, well, damp?",
+    "DESCRIPTIONS": ["When you resurface from swimming, draw a card."]
+  },
   "inklingMod:PlaceholderRelic": {
     "NAME": "Placeholder Energy Relic",
     "FLAVOR": "The snake is a friend.",
