Implement Swimming + Fresh Kicks
The relic was a bit tricky, we can't exactly listen for the power removal as far as I can tell? But we can have the power check for the relic!

--- a/theDefault/src/main/resources/inklingModResources/localization/eng/DefaultMod-Power-Strings.json
+++ b/theDefault/src/main/resources/inklingModResources/localization/eng/DefaultMod-Power-Strings.json
@@ -1,4 +1,10 @@
 {
+  "inklingMod:SwimmingPower": {
+    "NAME": "Swimming",
+    "DESCRIPTIONS": [
+      "Can't attack, gain #b1 [E] after playing a card. Lasts until your next turn."
+    ]
+  },
   "inklingMod:CommonPower": {
     "NAME": "Placeholder Power",
     "DESCRIPTIONS": ["You applied #b", " keyword.", " keywords."]
