Remove cute woomy and veemos
These were mostly customization & text formatting tests, I don't want them in the final version! (We'll woomy elsewhere :3)

--- a/theDefault/src/main/resources/inklingModResources/localization/eng/DefaultMod-Card-Strings.json
+++ b/theDefault/src/main/resources/inklingModResources/localization/eng/DefaultMod-Card-Strings.json
@@ -1,11 +1,11 @@
 {
   "inklingMod:Strike": {
     "NAME": "Strike",
-    "DESCRIPTION": "Deal !D! damage. NL woomy!"
+    "DESCRIPTION": "Deal !D! damage."
   },
   "inklingMod:Defend": {
     "NAME": "Defend",
-    "DESCRIPTION": "Gain !B! Block. NL veemo!"
+    "DESCRIPTION": "Gain !B! Block."
   },
   "inklingMod:Dive": {
     "NAME": "Dive!",
