Implement actual Ink effect
Heyy it works! OwO

--- a/inklingMod/src/main/resources/inklingModResources/localization/eng/DefaultMod-Power-Strings.json
+++ b/inklingMod/src/main/resources/inklingModResources/localization/eng/DefaultMod-Power-Strings.json
@@ -5,6 +5,13 @@
       "Can't attack, gain #b1 [E] after playing a card. Lasts until your next turn."
     ]
   },
+  "inklingMod:InkPower": {
+    "NAME": "Ink",
+    "DESCRIPTIONS": [
+      "Receive #b",
+      " more damage from #yAttacks. Each turn, reduces by 50%."
+    ]
+  },
   "inklingMod:CommonPower": {
     "NAME": "Placeholder Power",
     "DESCRIPTIONS": ["You applied #b", " keyword.", " keywords."]
