Our first weapon: Splattershot Jr!
A lot of tricky things here, but we got there!! One notable decision was to split the upgraded version into two different powers, to ease the logic for replacing different weapons vs the same weapon. This'll be more annoying to maintain in certain ways, but I think it's the right call for simplicity!

--- a/inklingMod/src/main/resources/inklingModResources/localization/eng/DefaultMod-Card-Strings.json
+++ b/inklingMod/src/main/resources/inklingModResources/localization/eng/DefaultMod-Card-Strings.json
@@ -16,6 +16,15 @@
     "NAME": "Splat Bomb",
     "DESCRIPTION": "Apply !M! inklingmod:Ink to all enemies."
   },
+  "inklingMod:SplattershotJr": {
+    "NAME": "Splattershot Jr.",
+    "DESCRIPTION": "inklingmod:Weapon. Add 2 *Junior *Shots to your hand each turn.",
+    "UPGRADE_DESCRIPTION": "inklingmod:Weapon. Add 2 *Junior *Shots+ to your hand each turn."
+  },
+  "inklingMod:JuniorShot": {
+    "NAME": "Junior Shot",
+    "DESCRIPTION": "Ethereal. Deal !D! damage. NL Apply !M! inklingmod:Ink."
+  },
   "inklingMod:DefaultCommonAttack": {
     "NAME": "Strike",
     "DESCRIPTION": "Deal !D! damage. NL [#0000ff]This[] [#ff0000]Is[] [#ffff00]How[] [#88888]color[] [#ff00ff]works.[]"
