Simplify Dive! text
With more complex cards coming, I don't want to be explaining Swim all the time—and then the inconsistency becomes a problem.

--- a/inklingMod/src/main/resources/inklingModResources/localization/eng/DefaultMod-Card-Strings.json
+++ b/inklingMod/src/main/resources/inklingModResources/localization/eng/DefaultMod-Card-Strings.json
@@ -9,8 +9,8 @@
   },
   "inklingMod:Dive": {
     "NAME": "Dive!",
-    "DESCRIPTION": "inklingmod:Swim until the start of your next turn. NL Draw !M! card.",
-    "UPGRADE_DESCRIPTION": "inklingmod:Swim until the start of your next turn. NL Draw !M! cards."
+    "DESCRIPTION": "inklingmod:Swim. NL Draw !M! card.",
+    "UPGRADE_DESCRIPTION": "inklingmod:Swim. NL Draw !M! cards."
   },
   "inklingMod:SplatBomb": {
     "NAME": "Splat Bomb",
