--- a/inklingMod/src/main/resources/inklingModResources/localization/eng/DefaultMod-Card-Strings.json
+++ b/inklingMod/src/main/resources/inklingModResources/localization/eng/DefaultMod-Card-Strings.json
@@ -31,7 +31,7 @@
   },
   "inklingMod:JuniorShot": {
     "NAME": "Junior Shot",
-    "DESCRIPTION": "Ethereal. NL Deal !D! damage. NL Apply !M! inklingmod:Ink."
+    "DESCRIPTION": "Ethereal. NL Deal !D! damage. NL Apply !M! inklingmod:Ink. Exhaust."
   },
   "inklingMod:SplatBrella": {
     "NAME": "Splat Brella",
@@ -40,7 +40,7 @@
   },
   "inklingMod:BrellaSplash": {
     "NAME": "Brella Splash",
-    "DESCRIPTION": "Ethereal. Apply !M! inklingmod:Ink. Gain !B! Block."
+    "DESCRIPTION": "Ethereal. NL Apply !M! inklingmod:Ink. Gain !B! Block. Exhaust."
   },
   "inklingMod:DefaultCommonAttack": {
     "NAME": "Strike",
