Add Surprise! card
we also refactored how we listen for surface events, creating an `onSurface` handler for the powers/relics

--- a/inklingMod/src/main/resources/inklingModResources/localization/eng/DefaultMod-Card-Strings.json
+++ b/inklingMod/src/main/resources/inklingModResources/localization/eng/DefaultMod-Card-Strings.json
@@ -12,6 +12,11 @@
     "DESCRIPTION": "inklingmod:Swim. NL Draw !M! card.",
     "UPGRADE_DESCRIPTION": "inklingmod:Swim. NL Draw !M! cards."
   },
+  "inklingMod:Surprise": {
+    "NAME": "Surprise!",
+    "DESCRIPTION": "inklingmod:Swim. NL When you resurface, apply !M! inklingmod:Ink to a random enemy.",
+    "UPGRADE_DESCRIPTION": "inklingmod:Swim. NL When you resurface, apply !M! inklingmod:Ink to a random enemy. NL Draw a card."
+  },
   "inklingMod:Retreat": {
     "NAME": "Retreat!",
     "DESCRIPTION": "inklingmod:Swim. NL Gain !B! Block."
