Add Booyah to discard, not draw
This should slow down the engine a bit, which is probably necessary lol, and also it prevents the loop situation where your draw pile is empty so you keep looping booyahs into it lmao

--- a/inklingMod/src/main/resources/inklingModResources/localization/eng/DefaultMod-Card-Strings.json
+++ b/inklingMod/src/main/resources/inklingModResources/localization/eng/DefaultMod-Card-Strings.json
@@ -80,8 +80,8 @@
   },
   "inklingMod:Booyah": {
     "NAME": "Booyah!",
-    "DESCRIPTION": "Shuffle a *Booyah! into your draw pile. NL Draw a card.",
-    "UPGRADE_DESCRIPTION": "Innate. NL Shuffle a *Booyah! into your draw pile. NL Draw a card."
+    "DESCRIPTION": "Shuffle a *Booyah! into your discard pile. NL Draw !M! card.",
+    "UPGRADE_DESCRIPTION": "Shuffle a *Booyah! into your discard pile. NL Draw !M! cards."
   },
   "inklingMod:NinjaSquid": {
     "NAME": "Ninja Squid",
