Add Killer Wail 5.1
Hey now we shouldn't crash on boss card rewards anymore! lol

--- a/inklingMod/src/main/resources/inklingModResources/localization/eng/DefaultMod-Card-Strings.json
+++ b/inklingMod/src/main/resources/inklingModResources/localization/eng/DefaultMod-Card-Strings.json
@@ -88,6 +88,10 @@
     "DESCRIPTION": "Ethereal. While inklingmod:swimming, reduce all damage taken from attacks to 1.",
     "UPGRADE_DESCRIPTION": "While inklingmod:swimming, reduce all damage taken from attacks to 1."
   },
+  "inklingMod:KillerWail5Point1": {
+    "NAME": "Killer Wail 5.1",
+    "DESCRIPTION": "Deal !D! damage to a random enemy 6 times. Exhaust."
+  },
   "inklingMod:DefaultCommonAttack": {
     "NAME": "Strike",
     "DESCRIPTION": "Deal !D! damage. NL [#0000ff]This[] [#ff0000]Is[] [#ffff00]How[] [#88888]color[] [#ff00ff]works.[]"
