Implement Fizzy Bomb
Also simplified the design a bit, especially seeing how dangerous even just Killer Wail's 6 attacks are lol

--- a/inklingMod/src/main/resources/inklingModResources/localization/eng/DefaultMod-Card-Strings.json
+++ b/inklingMod/src/main/resources/inklingModResources/localization/eng/DefaultMod-Card-Strings.json
@@ -35,7 +35,7 @@
   },
   "inklingMod:FizzyBomb": {
     "NAME": "Fizzy Bomb",
-    "DESCRIPTION": "Deal !D! damage X times. NL Repeat for X enemies total, chosen randomly. NL (NOT BUILT YET)"
+    "DESCRIPTION": "Deal !D! damage twice. NL Repeat for X enemies total, chosen randomly."
   },
   "inklingMod:SplattershotJr": {
     "NAME": "Splattershot Jr.",
