--- a/inklingMod/src/main/resources/inklingModResources/localization/eng/DefaultMod-Card-Strings.json
+++ b/inklingMod/src/main/resources/inklingModResources/localization/eng/DefaultMod-Card-Strings.json
@@ -35,7 +35,7 @@
   },
   "inklingMod:FizzyBomb": {
     "NAME": "Fizzy Bomb",
-    "DESCRIPTION": "Deal !D! damage X times. NL Repeat for X enemies total, chosen randomly."
+    "DESCRIPTION": "Deal !D! damage X times. NL Repeat for X enemies total, chosen randomly. NL Exhaust."
   },
   "inklingMod:SplattershotJr": {
     "NAME": "Splattershot Jr.",
