--- a/inklingMod/src/main/resources/inklingModResources/localization/eng/DefaultMod-Power-Strings.json
+++ b/inklingMod/src/main/resources/inklingModResources/localization/eng/DefaultMod-Power-Strings.json
@@ -52,6 +52,18 @@
       "Add a #yDyna #yRoll+ and #yDyna #ySplash+ to your hand each turn."
     ]
   },
+  "inklingMod:DappleDualiesPower": {
+    "NAME": "Weapon: Dapple Dualies",
+    "DESCRIPTIONS": [
+      "Add a #yDapple #yShot and a #yDapple #yRoll to your hand each turn."
+    ]
+  },
+  "inklingMod:DappleDualiesPlusPower": {
+    "NAME": "Weapon: Dapple Dualies+",
+    "DESCRIPTIONS": [
+      "Add a #yDapple #yShot+ and a #yDapple #yRoll+ to your hand each turn."
+    ]
+  },
   "inklingMod:NinjaSquidPower": {
     "NAME": "Ninja Squid",
     "DESCRIPTIONS": [
