Add Splat Wall card

--- a/inklingMod/src/main/resources/inklingModResources/localization/eng/InklingMod-Card-Strings.json
+++ b/inklingMod/src/main/resources/inklingModResources/localization/eng/InklingMod-Card-Strings.json
@@ -37,6 +37,10 @@
     "NAME": "Fizzy Bomb",
     "DESCRIPTION": "Deal !D! damage X times. NL Repeat for X enemies total, chosen randomly. NL Exhaust."
   },
+  "inklingMod:SplatWall": {
+    "NAME": "Splat Wall",
+    "DESCRIPTION": "Gain !B! Block. Whenever you are attacked this turn, apply !M! Ink to the attacker."
+  },
   "inklingMod:SplattershotJr": {
     "NAME": "Splattershot Jr.",
     "DESCRIPTION": "inklingmod:Weapon. Add 2 *Junior *Shots to your hand each turn.",
