Add Booyah counter
It doesn't make the Booyah Bomb yet, but it will soon!!

--- a/inklingMod/src/main/resources/inklingModResources/localization/eng/InklingMod-Power-Strings.json
+++ b/inklingMod/src/main/resources/inklingModResources/localization/eng/InklingMod-Power-Strings.json
@@ -79,5 +79,9 @@
     "DESCRIPTIONS": [
       "While inklingmod:swimming, reduce all damage taken from attacks to 1."
     ]
+  },
+  "inklingMod:BooyahPower": {
+    "NAME": "Booyah!",
+    "DESCRIPTIONS": ["You have Booyah'd #b", " times. Woomy!"]
   }
 }
