Booyah Bomb activation!
I still need to figure out how to like. trash all of your booyahs?
Also need to make sure you get an upgaded Booyah Bomb if you used an upgraded Booyah at any point

--- a/inklingMod/src/main/resources/inklingModResources/localization/eng/InklingMod-Card-Strings.json
+++ b/inklingMod/src/main/resources/inklingModResources/localization/eng/InklingMod-Card-Strings.json
@@ -99,6 +99,10 @@
     "DESCRIPTION": "Shuffle a *Booyah! into your discard pile. NL Draw !M! card.",
     "UPGRADE_DESCRIPTION": "Shuffle a *Booyah! into your discard pile. NL Draw !M! cards."
   },
+  "inklingMod:BooyahBomb": {
+    "NAME": "Booyah Bomb",
+    "DESCRIPTION": "Retain. NL Deal !D! damage to all enemies !M! times. NL Exhaust."
+  },
   "inklingMod:NinjaSquid": {
     "NAME": "Ninja Squid",
     "DESCRIPTION": "Ethereal. While inklingmod:swimming, reduce all damage taken from attacks to 1.",
