Exhaust Booyahs when you get a Booyah Bomb
Also we add a Booyah to your hand when you play Booyah Bomb to get you started again, and also I noticed a phrasing mistake in Booyah and fixed it!

--- a/inklingMod/src/main/resources/inklingModResources/localization/eng/InklingMod-Card-Strings.json
+++ b/inklingMod/src/main/resources/inklingModResources/localization/eng/InklingMod-Card-Strings.json
@@ -96,12 +96,13 @@
   },
   "inklingMod:Booyah": {
     "NAME": "Booyah!",
-    "DESCRIPTION": "Shuffle a *Booyah! into your discard pile. NL Draw !M! card.",
-    "UPGRADE_DESCRIPTION": "Shuffle a *Booyah! into your discard pile. NL Draw !M! cards."
+    "DESCRIPTION": "Add a *Booyah! to your discard pile. NL Draw !M! card.",
+    "UPGRADE_DESCRIPTION": "Add a *Booyah! to your discard pile. NL Draw !M! cards."
   },
   "inklingMod:BooyahBomb": {
     "NAME": "Booyah Bomb",
-    "DESCRIPTION": "Retain. NL Deal !D! damage to all enemies !M! times. NL Exhaust."
+    "DESCRIPTION": "Retain. NL Deal !D! damage to all enemies !M! times. Add a *Booyah! to your hand. NL Exhaust.",
+    "UPGRADE_DESCRIPTION": "Retain. NL Deal !D! damage to all enemies !M! times. Add a *Booyah!+ to your hand. NL Exhaust."
   },
   "inklingMod:NinjaSquid": {
     "NAME": "Ninja Squid",
