Fix typo in Dapple Roll

--- a/inklingMod/src/main/resources/inklingModResources/localization/eng/InklingMod-Card-Strings.json
+++ b/inklingMod/src/main/resources/inklingModResources/localization/eng/InklingMod-Card-Strings.json
@@ -92,7 +92,7 @@
   },
   "inklingMod:DappleRoll": {
     "NAME": "Dapple Roll",
-    "DESCRIPTION": "Etheral. NL Gain !B! Block. NL Exhaust."
+    "DESCRIPTION": "Ethereal. NL Gain !B! Block. NL Exhaust."
   },
   "inklingMod:Booyah": {
     "NAME": "Booyah!",
